--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
+    "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
